--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <h1>RUN BUDDY</h1>
-        What We Do
-        🏃
+        What We Do What Your Trainers Reach Out
     </body>
 </html>
