--- a/index.html
+++ b/index.html
@@ -148,19 +148,16 @@
 
         <!-- "reach out" section-->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <h2 class="section-title secondary-border">
+                Reach Out</h2>
                 <div class="contact-info">
                     <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3528.7968830058885!2d-82.67262078440288!3d27.816022382747114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2e38cd1ce6f5f%3A0x253d97ade92d34d7!2s2701%2048th%20Ave%20N%2C%20St.%20Petersburg%2C%20FL%2033714!5e0!3m2!1sen!2sus!4v1591306249208!5m2!1sen!2sus" 
                     frameborder="0"
-                    height="400"
-                    width="400"
                     style="border:0"
-                    allowfullscreen
-                    >
-                    </iframe>"
-                </div>
-                <div>
+                    allowfullscreen >
+                    </iframe>                   
+                    <div>
                     <h3>Run Buddy</h3>
                     <p>
                         Any questions or cencerns before signing up?
